[project]
name = "invoice-agent"
version = "1.0.0"
description = "AI-powered invoice management system built with Google Gemini and Stripe integration. Built with uv for ultra-fast Python package management."
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Invoice Agent Team"}
]
keywords = ["invoice", "ai", "gemini", "stripe", "fastapi", "streamlit", "uv"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "google-generativeai",
    "pydantic",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "requests",
    "websockets", 
    "streamlit",
    "stripe"
]

[project.urls]
Homepage = "https://github.com/yourusername/invoice-agent"
Repository = "https://github.com/yourusername/invoice-agent"
Issues = "https://github.com/yourusername/invoice-agent/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = []
